[gd_scene load_steps=6 format=3 uid="uid://chxe78yjqftkl"]

[ext_resource type="Script" path="res://addons/silent_wolf/Auth/Register.gd" id="1"]
[ext_resource type="Theme" uid="uid://d2eakbmaefnt6" path="res://addons/silent_wolf/assets/themes/sw_theme.tres" id="1_dsws8"]
[ext_resource type="PackedScene" uid="uid://clllbf6am8qdf" path="res://addons/silent_wolf/common/SWButton.tscn" id="2"]
[ext_resource type="Texture2D" uid="uid://dh8fem1lgom04" path="res://addons/silent_wolf/assets/gfx/info_icon_small.png" id="5"]
[ext_resource type="Texture2D" uid="uid://gdw18po2h7hb" path="res://addons/silent_wolf/assets/gfx/dummy_info_icon_small.png" id="6"]

[node name="Register" type="TextureRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1920.0
offset_bottom = -1080.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_dsws8")
script = ExtResource("1")

[node name="BackButton" parent="." instance=ExtResource("2")]
layout_mode = 0
offset_left = 215.0
offset_top = 51.0
offset_right = 281.0
offset_bottom = 82.0
theme_override_font_sizes/font_size = 36
text = "‚Üê Back"

[node name="FormContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 449.0
offset_top = 194.0
offset_right = 1436.0
offset_bottom = 998.0
theme_override_constants/separation = 36

[node name="Label" type="Label" parent="FormContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "Sign up"
horizontal_alignment = 1

[node name="MainFormContainer" type="HBoxContainer" parent="FormContainer"]
layout_mode = 2
theme_override_constants/separation = 36

[node name="FormLabels" type="VBoxContainer" parent="FormContainer/MainFormContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 32

[node name="PlayerNameLabel" type="Label" parent="FormContainer/MainFormContainer/FormLabels"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Username:"

[node name="EmailLabel" type="Label" parent="FormContainer/MainFormContainer/FormLabels"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Email:"

[node name="PasswordLabel" type="Label" parent="FormContainer/MainFormContainer/FormLabels"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Password:"

[node name="ConfirmPasswordLabel" type="Label" parent="FormContainer/MainFormContainer/FormLabels"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Confirm password:"

[node name="FormInputFields" type="VBoxContainer" parent="FormContainer/MainFormContainer"]
custom_minimum_size = Vector2(460, 0)
layout_mode = 2

[node name="PlayerName" type="LineEdit" parent="FormContainer/MainFormContainer/FormInputFields"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
max_length = 30

[node name="Email" type="LineEdit" parent="FormContainer/MainFormContainer/FormInputFields"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
max_length = 50

[node name="Password" type="LineEdit" parent="FormContainer/MainFormContainer/FormInputFields"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
max_length = 30
secret = true

[node name="ConfirmPassword" type="LineEdit" parent="FormContainer/MainFormContainer/FormInputFields"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
max_length = 30
secret = true

[node name="InfoLabels" type="VBoxContainer" parent="FormContainer/MainFormContainer"]
layout_direction = 3
layout_mode = 2
theme = ExtResource("1_dsws8")

[node name="UsernameToolButton" type="Button" parent="FormContainer/MainFormContainer/InfoLabels"]
layout_mode = 2
icon = ExtResource("5")
flat = true

[node name="DummyToolButton1" type="Button" parent="FormContainer/MainFormContainer/InfoLabels"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
icon = ExtResource("6")

[node name="PasswordToolButton" type="Button" parent="FormContainer/MainFormContainer/InfoLabels"]
layout_mode = 2
icon = ExtResource("5")
flat = true

[node name="DummyToolButton2" type="Button" parent="FormContainer/MainFormContainer/InfoLabels"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
icon = ExtResource("6")

[node name="InfoBox" type="Label" parent="FormContainer"]
visible = false
layout_mode = 2
text = "Password should contain at least 8 characters including uppercase and lowercase letters, numbers and (optionally) special characters."
autowrap_mode = 1

[node name="ErrorMessage" type="Label" parent="FormContainer"]
visible = false
custom_minimum_size = Vector2(36, 0)
layout_mode = 2
theme = ExtResource("1_dsws8")
theme_override_colors/font_color = Color(0.92549, 0, 0, 1)
horizontal_alignment = 1
autowrap_mode = 1

[node name="RegisterButton" parent="FormContainer" instance=ExtResource("2")]
custom_minimum_size = Vector2(280, 80)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 48
text = "Submit"

[node name="ProcessingLabel" type="Label" parent="FormContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 36
text = "Processing..."

[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="mouse_entered" from="FormContainer/MainFormContainer/InfoLabels/UsernameToolButton" to="." method="_on_UsernameToolButton_mouse_entered"]
[connection signal="mouse_exited" from="FormContainer/MainFormContainer/InfoLabels/UsernameToolButton" to="." method="_on_UsernameToolButton_mouse_exited"]
[connection signal="mouse_entered" from="FormContainer/MainFormContainer/InfoLabels/PasswordToolButton" to="." method="_on_PasswordToolButton_mouse_entered"]
[connection signal="mouse_exited" from="FormContainer/MainFormContainer/InfoLabels/PasswordToolButton" to="." method="_on_PasswordToolButton_mouse_exited"]
[connection signal="pressed" from="FormContainer/RegisterButton" to="." method="_on_RegisterButton_pressed"]
